--- a/src/DutchTreat/DutchTreat/wwwroot/css/site.css
+++ b/src/DutchTreat/DutchTreat/wwwroot/css/site.css
@@ -23,3 +23,11 @@ label {
 #form input[type=submit]{
     background-color:lightgreen;
 }
+
+ul.product-props{
+    font-size: small;
+}
+
+ul.product-props li{
+    list-style-type:none;
+}
