--- a/src/DutchTreat/DutchTreat/Views/App/Index.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/App/Index.cshtml
@@ -7,13 +7,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Dutch Treat: @ViewBag.Title</title>
-    <link href="~css/site.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <h2>@ViewBag.Title</h2>
 
     <div class="product-info">
-        <img src="~img/VanGogh.jpg" />
+        <img src="~/img/VanGogh.jpg" />
         <h3>Mug</h3>
         <ul class="product-props">
             <li>Price $9.99</li>
@@ -71,7 +71,7 @@
         </form>
     </div>
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="/lib/jquery/dist/jquery.js"></script>
     <script src="~/js/index.js"></script>
 </body>
 
