Using tag helpers

--- a/src/DutchTreat/DutchTreat/Views/App/Index.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/App/Index.cshtml
@@ -19,7 +19,7 @@
     <form>
         <label>Username:</label>
         <br />
-        <input" />
+        <input />
         <br />
         <label>Password:</label>
         <br />
