--- a/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
@@ -24,9 +24,10 @@
     </section>
     <footer>Copyright 2022 Dutch Treat LLC</footer>
 
- 
+
     <script src="/lib/jquery/dist/jquery.js"></script>
     <script src="~/js/index.js"></script>
+    @RenderSection("Scripts", false)
 </body>
 
 </html>
