--- a/src/DutchTreat/DutchTreat/Views/App/Contact.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/App/Contact.cshtml
@@ -1,22 +1,31 @@
 ﻿@model ContactViewModel
 
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
+}
 
 <form method="post">
+    <div asp-validation-summary="ModelOnly"></div>
     <label asp-for="Name">Your Name:</label>
     <br />
-    <input asp-for="Name"/>
+    <input asp-for="Name" />
+    <span asp-validation-for="Name"></span>
     <br />
-    <label>Email:</label>
+    <label asp-for="Email">Email:</label>
     <br />
-    <input asp-for="Email"/>
+    <input asp-for="Email" />
+    <span asp-validation-for="Email"></span>
     <br />
-    <label asp-for="Email">Subject:</label>
+    <label asp-for="Subject">Subject:</label>
     <br />
-    <input type="text" asp-for="Subject"/>
+    <input type="text" asp-for="Subject" />
+    <span asp-validation-for="Subject"></span>
     <br />
-    <label asp-for="Subject">Message:</label>
+    <label asp-for="Message">Message:</label>
     <br />
     <textarea rows="4" asp-for="Message"></textarea>
+    <span asp-validation-for="Message"></span>
     <br />
     <input type="submit" value="Send Message" />
 </form>
