--- a/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Dutch Treat: @ViewBag.Title</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
+    <header class="container">
 
         <h1>Welcome to Dutch Treat</h1>
         <menu>
@@ -18,14 +19,17 @@
         </menu>
 
     </header>
-    <section>
+    <section class="container">
         <h2>@ViewBag.Title</h2>
         @RenderBody()
     </section>
-    <footer>Copyright 2022 Dutch Treat LLC</footer>
+    <footer class="container">
+        <div class="text-center"> Copyright 2022 Dutch Treat LLC</div>
+    </footer>
 
 
     <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/index.js"></script>
     @RenderSection("Scripts", false)
 </body>
