--- a/src/DutchTreat/DutchTreat/wwwroot/css/site.css
+++ b/src/DutchTreat/DutchTreat/wwwroot/css/site.css
@@ -1,12 +1,12 @@
-﻿
+﻿/*
 input, textarea {
     font-size: 18px;
     width: 200px;
 }
 
-input[type=submit]{
-    width:auto;
-}
+    input[type=submit] {
+        width: auto;
+    }
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
@@ -16,69 +16,71 @@ label {
     font-size: 16px;
 }
 
-#form{
-    background-color:lightgray;
+#form {
+    background-color: lightgray;
 }
 
-#form input[type=submit]{
-    background-color:lightgreen;
-}
+    #form input[type=submit] {
+        background-color: lightgreen;
+    }
 
-ul.product-props{
+ul.product-props {
     font-size: small;
 }
 
-ul.product-props li{
-    list-style-type:none;
-}
+    ul.product-props li {
+        list-style-type: none;
+    }
 
-.product-info{
-    border:1px solid grey;
-    display:inline-block;
-    padding:8px 2px;
-    margin:2px;
+.product-info {
+    border: 1px solid grey;
+    display: inline-block;
+    padding: 8px 2px;
+    margin: 2px;
     width: 450px;
-    background-color:lightgray;
+    background-color: lightgray;
     border-radius: 5px;
 }
 
-.product-info img{
-    margin: 3px;
-    float:left;
-    border: 1px solid black;
-    max-width: 150px;
-}
+    .product-info img {
+        margin: 3px;
+        float: left;
+        border: 1px solid black;
+        max-width: 150px;
+    }
 
 #loginToggle {
     cursor: pointer;
 }
-.popupForm{
-       padding:5px;
-       border: 2px black inset;
-       display:inline-block;
+
+.popupForm {
+    padding: 5px;
+    border: 2px black inset;
+    display: inline-block;
 }
 
-.popupForm input{
-    width: 200px;
+    .popupForm input {
+        width: 200px;
+    }
+
+    .popupForm label {
+        width: 150px;
+        display: inline-block;
+    }
+
+    .popupForm input[type=checkbox], .popupForm input[type=submit] {
+        width: auto;
+    }
+
+menu li {
+    display: inline;
 }
 
-.popupForm label{
-    width:150px;
-    display:inline-block;
-}
+    menu li::after {
+        content: " |";
+    }
 
-.popupForm input[type=checkbox], .popupForm input[type=submit]{
-    width:auto;
-}
-
-menu li{
-   display:inline;
-}
-
-menu li::after{
-    content:" |";
-}
-
-menu li:last-of-type::after{
-    content:"";
-}
+    menu li:last-of-type::after {
+        content: "";
+    }
+*/
