--- a/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
@@ -8,15 +8,21 @@
 </head>
 <body>
     <header class="container">
-
-        <h1>Welcome to Dutch Treat</h1>
-        <menu>
-            <ul>
-                <li><a asp-controller="App" asp-action="Index">Home</a></li>
-                <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
-                <li><a asp-controller="App" asp-action="About">About</a></li>
-            </ul>
-        </menu>
+        <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+            <div class="container-fluid">
+                <h1 class="navbar-brand">Welcome to Dutch Treat</h1>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#theMenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="theMenu" class="navbar-collapse collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Index">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="About">About</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
     </header>
     <section class="container">
