--- a/src/DutchTreat/DutchTreat/Views/App/Contact.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/App/Contact.cshtml
@@ -9,28 +9,35 @@
     <div class="card card-body bg-light">
         <form method="post">
             <div asp-validation-summary="ModelOnly"></div>
-            <label asp-for="Name">Your Name:</label>
-            <br />
-            <input asp-for="Name" />
-            <span asp-validation-for="Name"></span>
-            <br />
-            <label asp-for="Email">Email:</label>
-            <br />
-            <input asp-for="Email" />
-            <span asp-validation-for="Email"></span>
-            <br />
-            <label asp-for="Subject">Subject:</label>
-            <br />
-            <input type="text" asp-for="Subject" />
-            <span asp-validation-for="Subject"></span>
-            <br />
-            <label asp-for="Message">Message:</label>
-            <br />
-            <textarea rows="4" asp-for="Message"></textarea>
-            <span asp-validation-for="Message"></span>
-            <br />
-            <input type="submit" value="Send Message" />
-            <div>@ViewBag.UserMessage</div>
+
+            <label class="form-label" asp-for="Name">Your Name:</label>
+            <div class="input-group mb-2">
+                <input asp-for="Name" class="form-control" />
+                <span class="text-danger" asp-validation-for="Name"></span>
+            </div>
+
+            <label class="form-label" asp-for="Email">Email:</label>
+            <div class="input-group mb-2">
+                <input asp-for="Email" class="form-control" />
+                <span class="text-danger" asp-validation-for="Email"></span>
+            </div>
+
+            <label class="form-label" asp-for="Subject">Subject:</label>
+            <div class="input-group mb-2">
+                <input type="text" asp-for="Subject" class="form-control" />
+                <span class="text-danger" asp-validation-for="Subject"></span>
+            </div>
+
+            <label class="form-label" asp-for="Message">Message:</label>
+            <div class="input-group mb-2">
+                <textarea rows="4" asp-for="Message" class="form-control"></textarea>
+                <span class="text-danger" asp-validation-for="Message"></span>
+            </div>
+
+            <div class="input-group">
+                <input type="submit" value="Send Message" class="btn btn-primary" />
+                <span class="text-success">@ViewBag.UserMessage</span>
+            </div>
         </form>
     </div>
 </div>
