--- a/src/DutchTreat/DutchTreat/Views/App/Contact.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/App/Contact.cshtml
@@ -35,7 +35,7 @@
             </div>
 
             <div class="input-group">
-                <input type="submit" value="Send Message" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary"><i class="fas fa-envelope"></i> Send Message</button>
                 <span class="text-success">@ViewBag.UserMessage</span>
             </div>
         </form>
