--- a/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/src/DutchTreat/DutchTreat/Views/Shared/_Layout.cshtml
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <title>Dutch Treat: @ViewBag.Title</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <header class="container">
         <nav class="navbar navbar-dark bg-dark navbar-expand-md">
             <div class="container-fluid">
-                <h1 class="navbar-brand">Welcome to Dutch Treat</h1>
+                <h1 class="navbar-brand"><i class="fas fa-paint-brush"></i> Dutch Treat</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#theMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
